--- a/indexer-core-service/Cargo.toml
+++ b/indexer-core-service/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
+utoipa = { version = "5.3.1", features = ["actix_extras"] }
+utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
