--- a/indexer-core-service/Cargo.toml
+++ b/indexer-core-service/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 utoipa = { version = "5.3.1", features = ["actix_extras"] }
